# experiments

./: .gitignore  CMakeLists.txt  Cargo.toml  ConfigSpike.sln  LICENSE  LICENSE.txt  README.md  README.txt  abarth500_D.kn5  akka-sboot.yml  build.gradle  build.sbt  centos-7.1.json  compile.sh  docker-akka-sboot-up  docker-build.sh  docker-compose.yml  docker-run-perftest  docker-run-perftest.sh  docker-sboot-akka-up  docker-system-down.sh  docker-system-reversed.sh  docker-system-sa-up.sh  docker-system-up.sh  grafana.dashboard  main.cpp  perftest.yml  plugin.cpp  plugin.hpp  plugin1.cpp  plugin2.cpp  re-macro-1.cpp  re-macro-2-code-only.cpp  re-macro-3-vector-params.cpp  re-macro-4-datatable.cpp  run.sh  runWithAgent.sh  sboot-akka.yml  settings.gradle  shared.hpp
AnotherDependency/: AnotherDependency.csproj  AnotherDependencyPlugin.cs  appsettings.json
Dependency/: Dependency.csproj  DependencyPlugin.cs  appsettings.json
Main/: IPAddressConverter.cs  Main.csproj  ObservableConfig.cs  Program.cs  Settings.cs  appsettings.json  usersettings.json
agent/: pom.xml
docker/: Dockerfile  wiremock-saboteur
docker-compose/: docker-compose.yml  prometheus.yml
downstream/: Dockerfile  README.txt  build.sbt  docker-build.sh
finagle-http/: build.sbt
finagle-thrift/: build.sbt
gatling/: build.gradle
grafana/: Dockerfile  build.gradle  docker-build.sh  sysintsim.json
http/: ks.cfg
jmx-webapp/: README.txt  pom.xml
kafka-streams/: build.sbt
kubernetes/: application.yaml  backend-deployment.yaml  backend-service.yaml  backend.yaml  cluster-service.yaml  frontend-deployment.yaml  frontend-service.yaml  frontend.yaml
load-injector/: build.gradle
mesosphere/: README.md  centos-7.1.json
perftest/: Dockerfile  build.sbt  docker-build.sh  run-in-docker.sh
project/: Build.scala  Docker.scala  plugins.sbt
service-akka/: Dockerfile  build.gradle  build.sbt  docker-build.sh
service-spring-boot/: Dockerfile  build.gradle  docker-build.sh
slowdown-strategies/: build.gradle
spring-boot/: build.sbt
spring-boot-app/: build.gradle
(+141 files in other folders)
